...
        padding: const EdgeInsets.symmetric(horizontal: 25),
        child: Column(
          crossAxisAlignment: CrossAxisAlignment.center,
          children: [
            const SizedBox(height: 20),
            Text(
              isLogin ? "Welcome Back!" : "Welcome!",
              style: const TextStyle(
                fontFamily: AppFonts.sfPro,
                fontWeight: FontWeight.w700,
                fontSize: 34,
                color: Color(0xFF2B2B2C),
              ),
...
                    child: CircularProgressIndicator(
                      color: Colors.white,
                      strokeWidth: 2,
                    ),
                  )
                : Text(
                    isLogin ? "Login" : "Next",
                    style: const TextStyle(
                      fontFamily: AppFonts.sfPro,
                      fontSize: 16,
                      fontWeight: FontWeight.w700,
                      color: Colors.white,
                    ),
...
