...
                  ),
                  _buildFeaturedSection(ref, state),
                   SizedBox(height: 10.h),
                  const Padding(
                    padding: EdgeInsets.symmetric(horizontal: 20),
                    child: Text(
                      "For You:",
                      style: TextStyle(
                        fontFamily: AppFonts.dmSans,
                        fontSize: 18,
                        fontWeight: FontWeight.w700,
                        color: Color(0xFF2B2B2C),
                      ),
...
